# puicl

./: LICENSE  README.md  evaluate_pretrained_model.py  evaluate_pretrained_model_reference.ipynb  model.py  pyproject.toml  run_pretrain_two_phase_hpc_v2.sbatch
.github/workflows/: tests.yml
evaluation_outputs/eval_20260310_004756/: feature_metadata_uci_iranian_churn_mixed.csv  feature_metadata_uci_wine_quality_binary_cutoff_6.csv  metrics_by_model.csv  pu_composition_summary.csv  replicate_metrics.csv  run_config.json  summary_metrics.csv
evaluation_outputs/eval_20260310_005349/: dataset_feature_profile.csv  metrics_by_model.csv  pu_composition_summary.csv  replicate_metrics.csv  run_config.json  summary_metrics_latest.csv
evaluation_outputs/eval_20260310_140815/: run_config.json
evaluation_outputs/eval_20260310_141306/: run_config.json
evaluation_outputs/eval_20260310_141514/: run_config.json
evaluation_outputs/eval_20260310_142020/: run_config.json
evaluation_outputs/eval_20260310_142200/: run_config.json
simplified_prior/: curriculum.py
train/: config.py  run_pretrain_hpc.py
